git-repositories/gitops-common-argocd/base/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd
spec:
  gateways:
    - argocd
  http:
    - route:
        - destination:
            port:
              number: 80
            host: argocd-server
